--- a/style.css
+++ b/style.css
@@ -258,3 +258,89 @@ footer {
   opacity: 0;
   transform: scale(0);
 }
+/* Text justify for all paragraphs */
+p {
+    text-align: justify;
+}
+/* Hero section text center */
+.hero-section p {
+    text-align: center;
+}
+/* About image translate */
+.about-img-1 {
+    transform: translateY(-25px) scale(2.4) !important;
+}
+
+
+.product-card{
+    max-width: 400px;
+    margin: auto;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    #about {
+        overflow: hidden !important;
+        padding-bottom: 70px !important;
+    }
+    .about-img-1 {
+        transform: translateY(-25px) scale(1.2) !important;
+    }
+    .about-content {
+        text-align: center;
+        padding-top: 20px !important;
+    }
+    .about-content p {
+        text-align: center;
+    }
+
+    #why-us *{
+        text-align: center !important;
+
+        .service-card-header{
+            flex-direction: column !important;
+        }
+        img{
+            width: auto;
+            margin: auto;
+        }
+    }
+    #services{
+        background-repeat: round !important;
+    }
+}
+
+@media (max-width: 768px){
+    #about {
+        overflow: hidden !important;
+        padding-bottom: 70px !important;
+    }
+    .about-img-1 {
+        transform: translateY(-5px) scale(1.5) !important;
+    }
+    .about-content {
+        text-align: center;
+        padding-top: 20px !important;
+    }
+    .about-content p {
+        text-align: center;
+    }
+
+    #why-us *{
+        text-align: center !important;
+
+        .service-card-header{
+            flex-direction: column !important;
+        }
+        img{
+            width: auto;
+            scale: 1.2;
+            margin: auto;
+            /* margin-top: 0px;
+            margin-bottom: 50px; */
+        }
+    }
+    #services{
+        background-repeat: round !important;
+    }
+}
+
